<resources>
    <string name="app_name">玖玖兄弟</string>

    <string name="toast_network_error">网络异常，请检查网络连接</string>
    <string name="newest_dynamic">最新动态</string>
    <string name="my_order">我的订单</string>
    <string name="my_points">我的积分</string>
    <string name="login">登录</string>
    <string name="phone_number">手机号</string>
    <string name="psw">密码</string>
    <string name="forget_psw">忘记密码</string>
    <string name="register">用户注册</string>
    <string name="next_step">下一步</string>
    <string name="sure_change">确认修改</string>
    <string name="input_new_psw">请输入新密码</string>
    <string name="sure_new_psw">确认新密码</string>
    <string name="get_msg_code">获取验证码</string>
    <string name="msg_code">验证码</string>
    <string name="input_phone_email">请输入手机号或邮箱</string>
    <string name="register_now">立即注册</string>
    <string name="commend_code">推荐码</string>
    <string name="register_agree">注册代表同意</string>
    <string name="agreement">《玖玖兄弟用户协议》</string>
    <string name="belong_address">所属地区</string>
    <string name="street">街道</string>
    <string name="jump">跳过</string>
    <string name="exit_login">退出登录</string>
    <string name="zhai_shi_ren_bei_an">债事人备案</string>
    <string name="debtor_for_the_record">Debtor for the record</string>
    <string name="jie_zhai_bei_an">解债备案</string>
    <string name="debt_for_the_record">Debt for the record</string>
    <string name="jie_zhai_ku">解债库</string>
    <string name="debt_relief_library">Debt relief library</string>
    <string name="serial_number">编号：</string>
    <string name="asset_type">资产类型：</string>
    <string name="asset_address">资产地址：</string>
    <string name="expect_price">期望价格：</string>
    <string name="assess_price">评估价格：</string>
</resources>
