<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srlEnableLoadmore="true"
            app:srlEnablePureScrollMode="true">

            <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">
                <!--手机号-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/x116"
                    android:layout_marginTop="20dp">

                    <ImageView
                        android:id="@+id/iv_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/password" />

                    <com.messoft.gzmy.nineninebrothers.view.XEditText
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_toRightOf="@+id/iv_phone"
                        android:background="@null"
                        android:hint="@string/input_new_psw"
                        android:inputType="textPassword"
                        android:textSize="@dimen/text_15sp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="#E0E0E0" />

                <!--验证码-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/x116">

                    <ImageView
                        android:id="@+id/iv_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/code" />

                    <com.messoft.gzmy.nineninebrothers.view.XEditText
                        android:id="@+id/et_code"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_toLeftOf="@+id/tv_get_code"
                        android:layout_marginRight="10dp"
                        android:layout_toRightOf="@+id/iv_code"
                        android:background="@null"
                        android:inputType="textPassword"
                        android:hint="@string/sure_new_psw"
                        android:textSize="@dimen/text_15sp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.3dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="#E0E0E0" />

                <!--下一步-->
                <TextView
                    android:id="@+id/tv_next"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/x90"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_login"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/sure_change"
                    android:textSize="@dimen/text_16sp"/>

            </LinearLayout>
        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
    </FrameLayout>
</layout>
