<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">
           <ImageView
               android:layout_width="match_parent"
               android:layout_height="@dimen/x450"
               android:scaleType="centerCrop"
               android:src="@drawable/bg_monkey_king"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Welcome to login"
               android:textColor="@color/white"
               android:textSize="@dimen/text_30sp"
               android:layout_centerHorizontal="true"
               android:layout_marginTop="@dimen/x160"/>

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_marginBottom="@dimen/x34"
               android:layout_marginLeft="@dimen/x30"
               android:layout_marginRight="@dimen/x30"
               android:layout_marginTop="@dimen/x400"
               app:cardElevation="@dimen/x12">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical"
                   android:paddingLeft="@dimen/x40"
                   android:paddingRight="@dimen/x40">

                   <!--手机号-->
                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="@dimen/x116"
                       android:layout_marginTop="@dimen/x90">

                       <ImageView
                           android:id="@+id/iv_phone"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_centerVertical="true"
                           android:layout_marginLeft="@dimen/x20"
                           android:src="@drawable/phone"/>

                       <com.messoft.gzmy.nineninebrothers.view.XEditText
                           android:id="@+id/et_account"
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:layout_marginLeft="@dimen/x15"
                           android:layout_marginRight="@dimen/x15"
                           android:layout_toRightOf="@+id/iv_phone"
                           android:background="@null"
                           android:hint="@string/phone_number"
                           android:textSize="@dimen/text_16sp"/>

                       <View
                           android:layout_width="match_parent"
                           android:layout_height="0.3dp"
                           android:layout_alignParentBottom="true"
                           android:background="#E0E0E0"/>
                   </RelativeLayout>

                   <!--密码-->
                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="@dimen/x116">

                       <ImageView
                           android:id="@+id/iv_psw"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_centerVertical="true"
                           android:layout_marginLeft="@dimen/x20"
                           android:src="@drawable/password"/>

                       <com.messoft.gzmy.nineninebrothers.view.XEditText
                           android:id="@+id/et_psw"
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:layout_marginLeft="@dimen/x15"
                           android:layout_marginRight="@dimen/x15"
                           android:layout_toRightOf="@+id/iv_psw"
                           android:background="@null"
                           android:hint="@string/psw"
                           android:inputType="textPassword"
                           android:textSize="@dimen/text_16sp"/>

                       <View
                           android:layout_width="match_parent"
                           android:layout_height="0.3dp"
                           android:layout_alignParentBottom="true"
                           android:background="#E0E0E0"/>
                   </RelativeLayout>

                   <!--登录-->
                   <TextView
                       android:id="@+id/tv_login"
                       android:layout_width="match_parent"
                       android:layout_height="@dimen/x90"
                       android:layout_marginTop="@dimen/x40"
                       android:background="@drawable/shape_login"
                       android:gravity="center"
                       android:textColor="@color/white"
                       android:text="@string/login"
                       android:textSize="@dimen/text_16sp"/>

                   <!--忘记密码跟注册-->
                   <RelativeLayout
                       android:layout_marginTop="@dimen/x10"
                       android:paddingLeft="@dimen/x20"
                       android:paddingRight="@dimen/x20"
                       android:layout_width="match_parent"
                       android:layout_height="@dimen/x60">

                       <TextView
                           android:background="@drawable/ripple_one_item_bg"
                           android:id="@+id/tv_forget_psw"
                           android:layout_width="@dimen/x240"
                           android:layout_height="match_parent"
                           android:gravity="left|center"
                           android:layout_centerVertical="true"
                           android:text="@string/forget_psw"
                           android:textColor="@color/colorPrimary"/>

                       <TextView
                           android:background="@drawable/ripple_one_item_bg"
                           android:id="@+id/tv_register"
                           android:layout_width="@dimen/x240"
                           android:layout_height="match_parent"
                           android:gravity="right|center"
                           android:layout_alignParentRight="true"
                           android:text="@string/register"
                           android:textColor="@color/colorPrimary"/>
                   </RelativeLayout>

                   <!--第三方登录下划线-->
                   <RelativeLayout
                       android:id="@+id/rl_line"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="@dimen/x30"
                       android:paddingLeft="@dimen/x30"
                       android:paddingRight="@dimen/x30">

                       <TextView
                           android:id="@+id/tv_three_login"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="第三方账号快速登录"
                           android:layout_alignParentTop="true"
                           android:layout_centerHorizontal="true"/>

                       <ImageView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_centerVertical="true"
                           android:layout_marginRight="@dimen/x18"
                           android:layout_toLeftOf="@+id/tv_three_login"
                           android:src="@drawable/spilt_left"/>

                       <ImageView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:layout_alignParentRight="true"
                           android:layout_centerVertical="true"
                           android:layout_marginLeft="@dimen/x18"
                           android:layout_toRightOf="@+id/tv_three_login"
                           android:src="@drawable/spilt_right"/>

                   </RelativeLayout>

                   <!--微信-->
                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/weixin"
                       android:layout_gravity="center_horizontal"
                       android:layout_marginTop="@dimen/x20"/>

               </LinearLayout>
           </android.support.v7.widget.CardView>

       </RelativeLayout>

        <ImageView
            android:layout_width="@dimen/x180"
            android:layout_height="@dimen/x180"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/x310"
            android:src="@drawable/default_header"/>

    </FrameLayout>
</layout>

